# docs_analyzer_3

./: .gitignore  IAnalista-debug.spec  IAnalista.spec  Notes.md  OLD_prompts.py  README.md  Tarefas a fazer (TODO).md  app-debug.spec  app_test_docx.py  app_test_docx.spec  app_test_docx_v2.py  app_test_docx_v2.spec  extract_pyfiles.py  llm_providers_backup.json  llm_providers_config_upload.json  pyproject.toml  run.py  run_dev.py  set_admin.py  test_app.py  test_app.spec  test_flet_filepicker.py  test_layout_app.py  teste_int.py  teste_interativo.py  testes_pdf_processor_and_ocr.py  upload_prompts.py
admin_py/: OLD_prompts.py  admin_llm_providers.py  cleanup_cloud_logs.py  upload_prompts.py
assets/: dict_municipios.json  dict_prompts.json
assets/templates_docx/: Mod. Despacho 1.docx  Mod. Info 1.docx  Mod. Info E Desp.docx
legacy/: utils_to_prompt.py
src/: app_cache.py  config_manager.py  dict_prompts.json  settings.py  utils.py
src/assets/: dict_prompts.json
src/core/: ai_orchestrator.py  doc_generator.py  pdf_processor.py  prompts.py
src/flet_ui/: app.py  components.py  layout.py  router.py  theme.py
src/flet_ui/views/: analyze_pdf_view.py  analyze_pdf_view1.py  home_view.py  knowledge_base_view.py  llm_settings_view.py  login_view.py  nc_analyze_view.py  others_view.py  profile_view.py  proxy_settings_view.py  signup_view.py
src/logger/: cloud_logger_handler.py  logger.py
src/security/: anonymizer.py
src/services/: credentials_manager.py  firebase_client.py  firebase_manager.py
tests/: conftest.py  test_config_manager.py
tests/services/: test_credentials_manager.py
