[project]
name = "docs-analyzer-3"
version = "0.1.0"
description = "..."
authors = [
    {name = "Edson Braga",email = "edson89braga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet (>=0.27.6,<0.28.0)",
    "rich (>=14.0.0,<15.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "firebase-admin (>=6.8.0,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "unidecode (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.poetry]
package-mode = false
