[project]
name = "docs-analyzer-3"
version = "0.2.0"
description = "..."
authors = [
    {name = "Edson Braga",email = "edson89braga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich (>=14.0.0,<15.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "firebase-admin (>=6.8.0,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "unidecode (>=1.4.0,<2.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=1.24.4)", # <2.0.0
    "langchain (>=0.3.25,<0.4.0)",
    "openai (>=1.78.1,<2.0.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "pyinstaller (>=6.14.1,<7.0.0)",
    "flet (>=0.28.3,<0.29.0)",
    "jaraco-text (>=4.0.0,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.5"

[tool.poetry]
package-mode = false
